# taka_the_discord_bot_tetrio_html_server

./: .env.example  .gitignore  Cargo.toml  Dockerfile
assets/teto/: banned.html  bot.html  index.html
assets/tetra/: index.html
src/: main.rs  teto.rs  tetra.rs
