[package]
name = "tetrio_html_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tetrio_html_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.28.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing-subscriber = {version="0.3.17", features = ["env-filter"]}
common = {path = "../taka_the_discord_bot_common" }
tetrio-api = { path = "../tetrio-api" }
itertools = "0.13.0"
reqwest = "0.12.7"
dotenvy = "0.15.7"
anyhow = "1.0.71"
chrono = {version = "0.4.26", features = ["serde"]}
moka = {version = "0.12.1", features = ["future"] }
urlencoding = "2.1.3"
redis = "0.26.1"
# http = "1.0.0"
